[project]
name = "project-kanban-fast"
version = "0.1.0"
description = ""
authors = [
    {name = "aysha",email = "aayykuk@mail.ru"}
]
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.41.0,<0.42.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
